# leads-crawler

./: .env  .gitignore  IDEA.md  README.md  leads.db  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  VERIFICATION.md
.planning/phases/02-core-extraction/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  VERIFICATION.md
.planning/phases/03-persistence-export/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md  VERIFICATION.md
.planning/phases/04-search-discovery/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md  VERIFICATION.md
.planning/phases/05-resilience-polish/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: main.py
src/cli/: __init__.py  batch.py  commands.py  errors.py  reddit.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  rate_limiter.py  retry.py  robots.py  signals.py  types.py
src/export/: __init__.py  columns.py  csv_generator.py
src/extraction/: __init__.py  reddit_lead_extractor.py  scraper.py
src/search/: __init__.py  models.py
src/storage/: __init__.py  checkpoint.py  database.py  deduplicator.py  lead_ingestion.py  lead_repo.py  models.py  query_builder.py
(+14 files in other folders)
