[project]
name = "lead-gen"
version = "0.1.0"
description = "Lead Generation CLI - Find and extract business contact information"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
]

[project.scripts]
lead-gen = "src.main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
