[tool.poetry]
name = "lead-gen"
version = "0.1.0"
description = "Lead Generation CLI - Find and extract business contact information"
authors = ["Saswata Biswas <saswata.biswas20@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0"
pydantic = "^2.0"
pydantic-settings = "^2.0"
python-dotenv = "^1.0"
pyyaml = "^6.0"
protego = "^0.4"
httpx = "^0.27"
email-validator = "^2.0"
crawl4ai = "^0.5"
beautifulsoup4 = "^4.12"
lxml = "^5.0"
phonenumbers = "^8.13"
sqlalchemy = "^2.0"

[tool.poetry.scripts]
lead-gen = "src.main:cli"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
